<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dusk_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="144dp"
        android:gravity="top"
        android:orientation="vertical">

        <ImageView
            android:layout_width="380dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="35dp"
            android:contentDescription="@string/leadme_logo"
            android:src="@drawable/leadme_reverse" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/guide_share_connect"
            android:textAlignment="center"
            android:textColor="@color/leadme_white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:text="Old Version"
            android:textAlignment="center"
            android:textColor="@color/leadme_white"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/powered_by"
            android:textAlignment="center"
            android:textColor="@color/leadme_white"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/lumination_logo"
            android:src="@mipmap/lumination_logo_reverse" />
    </LinearLayout>

</FrameLayout>