<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/url_task_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@drawable/rounded_popup_white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:showDividers="middle|beginning|end">

    <LinearLayout
        android:id="@+id/url_entry_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/url_entry_label"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="@string/enter_url"
                android:textColor="@color/leadme_black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="end"
                android:text="@string/search_web"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/url_search_btn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:layout_marginStart="3dp"
                android:src="@drawable/search_icon"
                android:contentDescription="@string/search_icon" />

        </LinearLayout>

        <EditText
            android:id="@+id/url_input_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:autofillHints="0"
            android:background="@drawable/rounded_btn_highlight"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:hint="@string/url_hint"
            android:imeOptions="actionNext"
            android:inputType="textUri"
            android:maxLines="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColorHint="@color/leadme_medium_grey"
            android:textSize="14sp"
            android:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/open_favourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_fav_star_solid"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:text="@string/browse_favourites"
                android:textColor="@color/leadme_darkest_grey"
                android:textSize="12sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/paste_from_clipboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:drawableStart="@drawable/icon_paste_from_clipboard"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/paste"
                android:textAlignment="textEnd"
                android:textColor="@color/leadme_darkest_grey"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/confirm_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/standard_btn_width"
            android:layout_height="@dimen/standard_btn_height"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_active"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/leadme_white"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/back_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/standard_btn_width"
            android:layout_height="@dimen/standard_btn_height"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_passive"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/leadme_darkest_grey"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>