<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@drawable/rounded_popup_white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:showDividers="middle|beginning|end">


    <ImageView
        android:id="@+id/favclear_icon"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:src="@drawable/alert_offtask_learner" />

    <TextView
        android:id="@+id/favclear_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/delete_favourites"
        android:textColor="@color/leadme_black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/favclear_comment"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_horizontal"
        android:text="@string/delete_videos_and_websites_confirm"
        android:textColor="@color/leadme_black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/ok_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/standard_btn_width"
        android:layout_height="@dimen/standard_btn_height"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_active"
        android:clickable="true"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/yes_delete_them"
        android:textAllCaps="false"
        android:textColor="@color/leadme_white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/back_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/standard_btn_width"
        android:layout_height="@dimen/standard_btn_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_passive"
        android:clickable="true"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/leadme_black"
        android:textSize="16sp" />

</LinearLayout>